Fixed TOC alignment bug, no work item
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C953091

--- a/ebookGenerator/resources/StaticFiles/xpp/css/document.css
+++ b/ebookGenerator/resources/StaticFiles/xpp/css/document.css
@@ -114,6 +114,10 @@ a + .no-indent:nth-child(2),
   width: 16px;
 }
 
+a:empty {
+  display: none;
+}
+
 .toc_analytical_hierarchy {
   margin-bottom: 1em;
 }
