--- a/ebookGenerator/resources/StaticFiles/xpp/scss/common.scss
+++ b/ebookGenerator/resources/StaticFiles/xpp/scss/common.scss
@@ -112,3 +112,7 @@
     vertical-align: middle;
     width: 16px;
 }
+
+a:empty {
+    display: none;
+}
